--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,21 +1,32 @@
 <form #f="ngForm" (ngSubmit)="save(f.value)">
 
+  <!-- TITLE -->
   <div class="form-group">
     <label for="title">Title</label>
-    <input ngModel name="title" id="title" type="text" class="form-control">
+    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+    <!-- Alert -->
+    <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+      Title is required.
+    </div>
   </div>
 
+  <!-- PRICE -->
   <div class="form-group">
     <label for="price">Price</label>
     <div class="input-group">
       <span class="input-group-addon">PLN</span>
-      <input ngModel name="price" id="price" type="number" class="form-control">
+      <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required>
+    </div>
+    <!-- Alert -->
+    <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+      Price is required.
     </div>
   </div>
 
+  <!-- CATEGORY - dropdown list -->
   <div class="form-group">
     <label for="category">Category</label>
-    <select ngModel name="category" id="category" class="form-control">
+    <select #category="ngModel" ngModel name="category" id="category" class="form-control" required>
       <option value=""></option>
 
       <option *ngFor="let c of categories$ | async" [value]="c.$key">
@@ -23,11 +34,20 @@
       </option>
 
     </select>
+    <!-- Alert -->
+    <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+      Category is required.
+    </div>
   </div>
 
+  <!-- IMG URL -->
   <div class="form-group">
     <label for="imageUrl">Image URL</label>
-    <input ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
+    <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control" required>
+    <!-- Alert -->
+    <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+      Image URL is required.
+    </div>
   </div>
 
   <button class="btn btn-primary">Save</button>
