Custom validation with ng2-validation library

--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -15,11 +15,12 @@
     <label for="price">Price</label>
     <div class="input-group">
       <span class="input-group-addon">PLN</span>
-      <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required>
+      <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required [min]="0">
     </div>
     <!-- Alert -->
     <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
-      Price is required.
+      <div *ngIf="price.errors.required">Price is required.</div>
+      <div *ngIf="price.errors.min">Price should be 0 or higher.</div>
     </div>
   </div>
 
@@ -43,10 +44,11 @@
   <!-- IMG URL -->
   <div class="form-group">
     <label for="imageUrl">Image URL</label>
-    <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control" required>
+    <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
     <!-- Alert -->
     <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
-      Image URL is required.
+      <div *ngIf="imageUrl.errors.required">Image URL is required</div>
+      <div *ngIf="imageUrl.errors.url">Enter a valid URL</div>
     </div>
   </div>
 
