--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -7,7 +7,7 @@
       <!-- TITLE -->
       <div class="form-group">
         <label for="title">Title</label>
-        <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control" required>
+        <input #title="ngModel" name="title" [(ngModel)]="product.title" id="title" type="text" class="form-control" required>
         <!-- Alert -->
         <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
           Title is required.
@@ -19,7 +19,7 @@
         <label for="price">Price</label>
         <div class="input-group">
           <span class="input-group-addon">PLN</span>
-          <input #price="ngModel" ngModel name="price" id="price" type="number" class="form-control" required [min]="0">
+          <input #price="ngModel" [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control" required [min]="0">
         </div>
         <!-- Alert -->
         <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
@@ -31,7 +31,7 @@
       <!-- CATEGORY - dropdown list -->
       <div class="form-group">
         <label for="category">Category</label>
-        <select #category="ngModel" ngModel name="category" id="category" class="form-control" required>
+        <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
           <option value=""></option>
 
           <option *ngFor="let c of categories$ | async" [value]="c.$key">
@@ -48,7 +48,7 @@
       <!-- IMG URL -->
       <div class="form-group">
         <label for="imageUrl">Image URL</label>
-        <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
+        <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
         <!-- Alert -->
         <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
           <div *ngIf="imageUrl.errors.required">Image URL is required</div>
@@ -63,10 +63,10 @@
   <!-- CARD - right column -->
   <div class="col-md-6">
     <div class="card" style="width: 20em">
-      <img [src]="imageUrl.value" class="card-img-top">
+      <img [src]="product.imageUrl" *ngIf="product.imageUrl" class="card-img-top">
       <div class="card-body">
-        <h4 class="card-title">{{ title.value }}</h4>
-        <p>{{ price.value | currency:'PLN':false }}</p>
+        <h4 class="card-title">{{ product.title }}</h4>
+        <p>{{ product.price | currency:'PLN' }}</p>
       </div>
     </div>
   </div>
