--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -57,6 +57,8 @@
       </div>
 
       <button class="btn btn-primary">Save</button>
+      <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
+      <button type="button" (click)="cancel()" class="btn btn-secondary">Cancel</button>
     </form>
   </div>
 
