--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -3,6 +3,13 @@
   <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
 </p>
 
+<p>
+  <input
+  #query
+  (keyup)="filter(query.value)"
+  type="text" class="form-control" placeholder="Search...">
+</p>
+
 <table class="table">
   <thead>
     <tr>
@@ -12,7 +19,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let p of products$ | async">
+    <!-- ALERT - no matching products -->
+    <tr *ngIf="filteredProducts?.length === 0">
+      <td colspan="3">
+        <div class="alert alert-danger" >No matching products</div>
+      </td>
+    </tr>
+    <!-- RENDER FILTERED PRODUCTS -->
+    <tr *ngFor="let p of filteredProducts">
       <td>{{ p.title }}</td>
       <td>{{ p.price | currency:'PLN'}}</td>
       <td>
