--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -13,25 +13,42 @@
   <div class="alert alert-danger">No matching products</div>
 </ng-template>
 
+<!-- TABLE -->
 <ng-template #table>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Price</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- RENDER FILTERED PRODUCTS -->
-      <tr *ngFor="let p of filteredProducts">
-        <td>{{ p.title }}</td>
-        <td>{{ p.price | currency:'PLN'}}</td>
-        <td>
-          <a [routerLink]="['/admin/products/', p.$key]">Edit</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</ng-template>
+  <data-table
+  [items]="items"
+  [itemCount]="itemCount"
+  (reload)="reloadItems($event)"
+  >
+    <data-table-column
+    [property]="'title'"
+    [header]="'Title'"
+    [sortable]="true"
+    [resizable]="true"
+    >
+    <ng-template #dataTableCell let-item="item">
+      {{ item.title }}
+    </ng-template>
+    </data-table-column>
 
+    <data-table-column
+    [property]="'price'"
+    [header]="'Price'"
+    [sortable]="true"
+    [resizable]="true"
+    >
+    <ng-template #dataTableCell let-item="item">
+      {{ item.price | currency: 'PLN' }}
+    </ng-template>
+    </data-table-column>
+
+    <data-table-column
+    [property]="'$key'"
+    >
+    <ng-template #dataTableCell let-item="item">
+      <a [routerLink]="['/admin/products/', item.$key]">Edit</a>
+    </ng-template>
+    </data-table-column>
+
+  </data-table>
+</ng-template>
