--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,32 @@
-<p>
-  products works!
-</p>
+<div class="row">
+  <div class="col-3">
+    <ul class="list-group">
+      <li *ngFor="let c of categories$ | async" class="list-group-item">
+        {{ c.name }}
+      </li>
+    </ul>
+  </div>
+  <div class="col">
+    <div class="row">
+      <ng-container *ngFor="let p of products$ | async; let i = index" >
+        <div class="col">
+          <div class="card" style="width: 15em; margin: 1em 0em">
+            <img class="card-img-top" [src]="p.imageUrl">
+            <div class="card-body">
+              <h4 class="card-title">{{ p.title }}</h4>
+              <p class="card-text">{{ p.price | currency:'PLN' }}</p>
+              <button class="btn btn-primary">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
+      </ng-container>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
