--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,20 +1,26 @@
 <div class="row">
   <div class="col-3">
-    <ul class="list-group">
-      <li *ngFor="let c of categories$ | async" class="list-group-item">
+    <div class="list-group">
+      <a
+      *ngFor="let c of categories$ | async"
+      routerLink="/"
+      [queryParams]="{ category: c.$key }"
+      class="list-group-item list-group-action"
+      [class.active]="category === c.$key"
+      >
         {{ c.name }}
-      </li>
-    </ul>
+      </a>
+    </div>
   </div>
   <div class="col">
     <div class="row">
-      <ng-container *ngFor="let p of products$ | async; let i = index" >
+      <ng-container *ngFor="let fp of filteredProducts; let i = index" >
         <div class="col">
           <div class="card" style="width: 15em; margin: 1em 0em">
-            <img class="card-img-top" [src]="p.imageUrl">
+            <img class="card-img-top" [src]="fp.imageUrl">
             <div class="card-body">
-              <h4 class="card-title">{{ p.title }}</h4>
-              <p class="card-text">{{ p.price | currency:'PLN' }}</p>
+              <h4 class="card-title">{{ fp.title }}</h4>
+              <p class="card-text">{{ fp.price | currency:'PLN' }}</p>
               <button class="btn btn-primary">Add to Cart</button>
             </div>
           </div>
