--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,14 +6,7 @@
     <div class="row">
       <ng-container *ngFor="let fp of filteredProducts; let i = index" >
         <div class="col">
-          <div class="card" style="width: 15em; margin: 1em 0em">
-            <img class="card-img-top" [src]="fp.imageUrl">
-            <div class="card-body">
-              <h4 class="card-title">{{ fp.title }}</h4>
-              <p class="card-text">{{ fp.price | currency:'PLN' }}</p>
-              <button class="btn btn-primary">Add to Cart</button>
-            </div>
-          </div>
+          <product-card [product]="fp"></product-card>
         </div>
         <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
       </ng-container>
