--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,7 +5,10 @@
     <div class="card-body">
       <h4 class="card-title">{{ product.title }}</h4>
       <p class="card-text">{{ product.price | currency:'PLN' }}</p>
-      <a *ngIf="showActions" href="#" class="btn btn-primary">Add to cart</a>
+
+    </div>
+    <div class="card-footer">
+      <a *ngIf="showActions" href="#" class="btn btn-primary btn-block">Add to cart</a>
     </div>
   </div>
 </div>
