Fixed bug cannot read  of undefinied

--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -65,7 +65,7 @@
   <!-- CARD - right column -->
   <div class="col-md-6">
     <div>
-      <product-card [product]="product" [showActions]="false" [componentLabel]="'Preview'"></product-card>
+      <product-cart [product]="product" [showActions]="false" [componentLabel]="'Preview'"></product-cart>
     </div>
 
   </div>
