--- a/src/app/product-cart/product-cart.component.html
+++ b/src/app/product-cart/product-cart.component.html
@@ -8,18 +8,35 @@
 
     </div>
     <div *ngIf="showActions" class="card-footer">
+
       <button
-        *ngIf="showActions"
+        *ngIf="getQuantity() === 0; else updateQuantity"
         (click)="addToCart(product)"
-        class="btn btn-primary btn-block"
+        class="btn btn-secondary btn-block"
         >Add to cart
       </button>
-      <div>{{ getQuantity() }}</div>
-      <button
-      (click)="logThat(product)"
-      class="btn btn-primary btn-block"
-      >LogThat
-    </button>
+
+      <ng-template #updateQuantity >
+
+        <div class="row no-gutters">
+          <div class="col-2">
+            <button class="btn btn-secondary btn-block">
+              -
+            </button>
+          </div>
+
+          <div class="col text-center">
+            {{ getQuantity() }} in cart
+          </div>
+
+          <div class="col-2">
+            <button class="btn btn-secondary btn-block">
+              +
+            </button>
+          </div>
+
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
