--- a/src/app/product-cart/product-cart.component.html
+++ b/src/app/product-cart/product-cart.component.html
@@ -5,24 +5,27 @@
     <div class="card-body">
       <h4 class="card-title">{{ product.title }}</h4>
       <p class="card-text">{{ product.price | currency:'PLN' }}</p>
-
     </div>
+
+    <!-- BUTTONS -->
     <div *ngIf="showActions" class="card-footer">
 
+      <!-- ADD TO CART BUTTON -->
       <button
         *ngIf="getQuantity() === 0; else updateQuantity"
-        (click)="addToCart(product)"
+        (click)="addToCart()"
         class="btn btn-secondary btn-block"
         >Add to cart
       </button>
 
+      <!-- UPDATE QUANTITY -->
       <ng-template #updateQuantity >
-
         <div class="row no-gutters">
+
           <div class="col-2">
-            <button class="btn btn-secondary btn-block">
-              -
-            </button>
+            <button
+            (click)="removeFromCart()"
+            class="btn btn-secondary btn-block">-</button>
           </div>
 
           <div class="col text-center">
@@ -30,13 +33,14 @@
           </div>
 
           <div class="col-2">
-            <button class="btn btn-secondary btn-block">
-              +
-            </button>
+            <button
+            (click)="addToCart()"
+            class="btn btn-secondary btn-block">+</button>
           </div>
 
         </div>
       </ng-template>
+
     </div>
   </div>
 </div>
