--- a/src/app/product-cart/product-cart.component.html
+++ b/src/app/product-cart/product-cart.component.html
@@ -8,11 +8,11 @@
     </div>
 
     <!-- BUTTONS -->
-    <div *ngIf="showActions" class="card-footer">
+    <div *ngIf="showActions && shoppingCart" class="card-footer">
 
       <!-- ADD TO CART BUTTON -->
       <button
-        *ngIf="getQuantity() === 0; else updateQuantity"
+        *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
         (click)="addToCart()"
         class="btn btn-secondary btn-block"
         >Add to cart
@@ -20,25 +20,11 @@
 
       <!-- UPDATE QUANTITY -->
       <ng-template #updateQuantity >
-        <div class="row no-gutters">
+        <product-quantity
+        [product]="product"
+        [shopping-cart]="shoppingCart">
 
-          <div class="col-2">
-            <button
-            (click)="removeFromCart()"
-            class="btn btn-secondary btn-block">-</button>
-          </div>
-
-          <div class="col text-center">
-            {{ getQuantity() }} in cart
-          </div>
-
-          <div class="col-2">
-            <button
-            (click)="addToCart()"
-            class="btn btn-secondary btn-block">+</button>
-          </div>
-
-        </div>
+        </product-quantity>
       </ng-template>
 
     </div>
