--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -10,16 +10,26 @@
       <tr>
         <th>Product</th>
         <th>Quantity</th>
-        <th></th>
+        <th>Price</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
-        <td> {{ item.product.title }} </td>
-        <td> {{ item.quantity }} </td>
-        <td></td>
+        <ng-container *ngIf="item.quantity > 0">
+          <td> {{ item.product.title }} </td>
+          <td> {{ item.quantity }} </td>
+          <td> {{ item.totalPrice | currency: 'PLN' }} </td>
+        </ng-container>
+
       </tr>
     </tbody>
+    <tfoot>
+      <tr>
+        <th></th>
+        <th></th>
+        <th> Total Price: {{ cart.totalPrice | currency: 'PLN' }} </th>
+      </tr>
+    </tfoot>
   </table>
 
 </ng-container>
