--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <ng-container *ngFor="let product of filteredProducts; let i = index" >
         <div class="col">
-          <product-cart [product]="product" [shopping-cart]="cart" ></product-cart>
+          <product-cart [product]="product" [shopping-cart]="shoppingCart" ></product-cart>
         </div>
         <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
       </ng-container>
