--- a/src/app/product-quantity/product-quantity.component.html
+++ b/src/app/product-quantity/product-quantity.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="col text-center">
-    {{ shoppingCart.getQuantity(product) }} in cart
+    {{ cart.getQuantity(product) }} in cart
   </div>
 
   <div class="col-2">
