--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -16,8 +16,11 @@
     <tbody>
       <tr *ngFor="let item of cart.items">
         <ng-container *ngIf="item.quantity > 0">
-          <td> {{ item.product.title }} </td>
-          <td> {{ item.quantity }} </td>
+          <td> {{ item.title }} </td>
+          <td>
+            <product-quantity [product]="item" [shopping-cart]="cart">
+            </product-quantity>
+          </td>
           <td> {{ item.totalPrice | currency: 'PLN' }} </td>
         </ng-container>
 
