Fixing getQ, when 0 remove from cart

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -34,5 +34,7 @@
       </tr>
     </tfoot>
   </table>
+  (click)="clearCart()"
+  <button class="btn btn-danger btn-sm">Clear cart</button>
 
 </ng-container>
