--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -8,20 +8,26 @@
   <table class="table">
     <thead>
       <tr>
+        <th></th>
         <th>Product</th>
-        <th>Quantity</th>
-        <th>Price</th>
+        <th class="text-center">Quantity</th>
+        <th class="text-right">Price</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
         <ng-container *ngIf="item.quantity > 0">
+          <td>
+            <div [style.backgroundImage]="'url(' + item.imageUrl + ')'" class="thumbnail"></div>
+          </td>
           <td> {{ item.title }} </td>
           <td>
             <product-quantity [product]="item" [shopping-cart]="cart">
             </product-quantity>
           </td>
-          <td> {{ item.totalPrice | currency: 'PLN' }} </td>
+          <td class="text-right">
+            {{ item.totalPrice | currency: 'PLN' }}
+          </td>
         </ng-container>
 
       </tr>
@@ -30,11 +36,15 @@
       <tr>
         <th></th>
         <th></th>
-        <th> Total Price: {{ cart.totalPrice | currency: 'PLN' }} </th>
+        <th></th>
+        <th class="text-right">
+          Total Price: {{ cart.totalPrice | currency: 'PLN' }} </th>
       </tr>
     </tfoot>
   </table>
+
+  <button
   (click)="clearCart()"
-  <button class="btn btn-danger btn-sm">Clear cart</button>
+  class="btn btn-danger btn-sm">Clear Shopping Cart</button>
 
 </ng-container>
