--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,10 +3,10 @@
     <product-filter [category]="category"></product-filter>
   </div>
   <div class="col">
-    <div class="row">
+    <div class="row" *ngIf="cart$ | async as cart">
       <ng-container *ngFor="let product of filteredProducts; let i = index" >
         <div class="col">
-          <product-cart [product]="product" [shopping-cart]="shoppingCart" ></product-cart>
+          <product-cart [product]="product" [shopping-cart]="cart" ></product-cart>
         </div>
         <div *ngIf="(i + 1) % 2 === 0" class="w-100"></div>
       </ng-container>
