--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -3,6 +3,9 @@
 
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
+
+    <button *ngIf="cart.items.length" (click)="clearCart()" class="btn btn-light btn-sm">Clear Shopping Cart
+    </button>
   </p>
 
   <table class="table">
@@ -43,8 +46,8 @@
     </tfoot>
   </table>
 
-  <button
-  (click)="clearCart()"
-  class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+  <!-- using anchor instead of handling click event -->
+  <a *ngIf="cart.totalItemsCount > 0" routerLink="/check-out" class="btn btn-primary">Check out
+  </a>
 
 </ng-container>
