--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <a class="navbar-brand" routerLink="/">O</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -10,11 +11,10 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">
           Shopping Cart
-          <span
-          class="badge badge-warning badge-pill"
-          *ngIf="cart$ | async as cart"
-          >
-            {{ cart.totalItemsCount }} items ({{ cart.totalPrice | currency: 'PLN' }})
+          <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart">
+            <span *ngIf="(cart.totalItemsCount === 1 ? 'item' : 'items') as itemOrItems">
+              {{ cart.totalItemsCount }} {{ itemOrItems }} ({{ cart.totalPrice | currency: 'PLN' }})
+            </span>
           </span>
         </a>
       </li>
@@ -28,7 +28,8 @@
 
 
       <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
           <ng-container *ngIf="appUser.isAdmin">
@@ -36,7 +37,7 @@
             <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
           </ng-container>
 
-          <a class="dropdown-item" (click)="logout()" >Log Out</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
 
